# ternary-compression-v2

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: lib.rs
